syntax = "proto3";

import "common.proto";    // Import the common message definitions

package product_proto;

service ProductService {
  // API to retrieve a list of products along with their stock availability
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
}

message ListProductsRequest {
  // Optional filter by shop ID
  int32 shop_id = 1; // Optional filter to list products specific to a shop

  // Optional search query
  string search_query = 2; // Search query to filter products by name or description

  // Pagination fields
  int32 page_number = 3; // Page number for pagination
  int32 page_size = 4; // Number of products per page

  // Sorting fields
  string sort_by = 5; // Field to sort by (e.g., price, name)
  string sort_order = 6; // Sort order (e.g., "asc" for ascending, "desc" for descending)
}

message ListProductsResponse {
  MessageResponseHeader responseHeader = 1; // Header for the response

  message Product {
    int32 id = 1; // Unique identifier for the product
    string name = 2; // Name of the product
    string description = 3; // Description of the product
    int32 price = 4; // Price of the product in the smallest currency unit (e.g., cents)
    int32 stock = 5; // Available stock for the product
    int32 shopId = 6; // shop id
    
  }
  repeated Product products = 2; // List of products returned by the API

  // Pagination metadata
  int32 total_products = 3; // Total number of products matching the request criteria
  int32 total_pages = 4; // Total number of pages based on the page size
  int32 current_page = 5; // Current page number
}
